--- a/.gitignore
+++ b/.gitignore
@@ -213,3 +213,12 @@ pip-log.txt
 
 #Mr Developer
 .mr.developer.cfg
+
+
+#############
+## Node
+#############
+
+node_modules
+build
+.sizecache.json
